--- a/tweet_classification_app/views/layout.ejs
+++ b/tweet_classification_app/views/layout.ejs
@@ -1,3 +1,5 @@
+<!-- include necessary for front end dependencies here -->
+
 <!DOCTYPE html>
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
   <head profile="http://gmpg.org/xfn/11">
