UPDATED ALL COMMENTS BUT STILL WORKING ON SILDER FOR DYNAMIC LABELS

--- a/tweet_classification_app/views/homepage.ejs
+++ b/tweet_classification_app/views/homepage.ejs
@@ -62,12 +62,12 @@ body, html {
     <body>
 
  <div class="bg">
-
+<!-- input text box and submit button -->
     <input class="btn2" type="text" name="code" id="searchTxt">
   <button class="btn" onClick="return searchURL()">Submit</button>
 
 </div>
-
+ <!-- This checks that whatever you enter in the text box is existing, and then navigates you to the right url -->
 <script>
      function searchURL() {
       var value = document.getElementById('searchTxt').value;
