--- a/tweet_classification_app/views/homepage.ejs
+++ b/tweet_classification_app/views/homepage.ejs
@@ -1,92 +1,32 @@
-  <!DOCTYPE html>
 
-  <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
-    <head profile="http://gmpg.org/xfn/11">
-      <title>Choose Classification Code</title>
- <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-     <script type="text/javascript" src="/js/dependencies/sails.io.js"></script>
-     <style>
-body, html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
+<% title = 'Choose Classification Code' %>
 
-.bg {
-
-  width: 100%;
-            height: 100%;
-            max-height: 100%;
-            margin: 0;
-            padding: 0;
-            background-image: url('tweet.png');
-            background-size:100% 100%;
-            background-repeat: no-repeat;
-}
-
-
-.bg .btn {
-    position: absolute;
-    top: 38%;
-    left: 76%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-}
-
-.bg .btn2 {
-  width: 220px;
-  height: 32px;
-    position: absolute;
-    top: 38%;
-    left: 61%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-.bg.btn:hover {
-    background-color: black;
-}
-
-   </style>
-    </head>
-
-    <body>
 
  <div class="bg">
-<!-- input text box and submit button -->
-    <input class="btn2" type="text" name="code" id="searchTxt">
+  <!-- input text box and submit button -->
+  <input class="btn2" type="text" name="code" id="searchTxt">
   <button class="btn" onClick="return searchURL()">Submit</button>
 
-</div>
- <!-- This checks that whatever you enter in the text box is existing, and then navigates you to the right url -->
+</div> 
+<!-- This checks that whatever you enter in the text box is existing, and then navigates you to the right url -->
 <script>
-     function searchURL() {
-      var value = document.getElementById('searchTxt').value;
-      var inn=io.sails.connect();
-      var qu1='/tweets/findcoll?q1=1';
-      inn.get(qu1, function (resData, jwres){
-        if (resData.resu.includes(value)){
-        console.log(typeof(value));
-        return window.location='/tweets/mainf?code='+value;
-      }
-      else{
-
-      }
-
-      });
-      
+ function searchURL() {
+  var value = document.getElementById('searchTxt').value;
+  var inn=io.sails.connect();
+  var qu1='/tweets/findcoll?q1=1';
+  inn.get(qu1, function (resData, jwres){
+    if (resData.resu.includes(value)){
+      console.log(typeof(value));
+      return window.location='/tweets/mainf?code='+value;
     }
+    else{
+
+    }
+
+  });
+
+}
 </script>
-    </body>
-  </html>
+
 
 
