--- a/tweet_classification_app/views/layout.ejs
+++ b/tweet_classification_app/views/layout.ejs
@@ -15,19 +15,26 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js'></script>
   <script type="text/javascript" src="/js/dependencies/sails.io.js"></script>
+  <script src="/dist/js/leaflet.extra-markers.js"></script>
+  <script src="/dist/js/leaflet.extra-markers.min.js"></script>
+  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+
+  
+
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/js/dependencies/sails.io.js"></script>
 
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/importer.css">
   <!--STYLES END-->
+
+  <link rel="stylesheet" href="/dist/css/leaflet.extra-markers.min.css">
   <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 
@@ -79,7 +86,6 @@
   .bg.btn:hover {
     background-color: black;
   }
-
 </style>
 </head>
 
