--- a/tweet_classification_app/views/layout.ejs
+++ b/tweet_classification_app/views/layout.ejs
@@ -14,13 +14,13 @@
 
 
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="/js/dependencies/sails.io.js"></script>
-  <script src="/dist/js/leaflet.extra-markers.js"></script>
-  <script src="/dist/js/leaflet.extra-markers.min.js"></script>
+  <script src="/leaflet_markers/js/leaflet.extra-markers.js"></script>
+  <script src="/leaflet_markers/js/leaflet.extra-markers.min.js"></script>
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
 
 
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.css">
 
-  <link rel="stylesheet" href="/dist/css/leaflet.extra-markers.min.css">
+  <link rel="stylesheet" href="/leaflet_markers/css/leaflet.extra-markers.min.css">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
@@ -103,6 +103,7 @@
 
   <!--SCRIPTS-->
   <script src="/js/dependencies/sails.io.js"></script>
+  <script src="/js/dependencies/sails.io 2.js"></script>
   <!--SCRIPTS END-->
 
 
