--- a/tweet_classification_app/views/layout.ejs
+++ b/tweet_classification_app/views/layout.ejs
@@ -1,111 +1,44 @@
 <!-- include necessary for front end dependencies here -->
-
 <!DOCTYPE html>
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://gmpg.org/xfn/11">
   <title><%=typeof title == 'undefined' ? 'Interactive Tweet Visualization' : title%></title>
-
   <!-- Viewport mobile tag for sensible mobile support -->
-
-
-
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
+  <!-- Your Script Tags -->
   <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="/js/dependencies/sails.io.js"></script>
   <script src="/leaflet_markers/js/leaflet.extra-markers.js"></script>
   <script src="/leaflet_markers/js/leaflet.extra-markers.min.js"></script>
-  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
-
-
   <script src="/leaflet_cluster/dist/leaflet.markercluster.js"></script>
-
-  
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+  <!--End of your Script Tags -->
 
   <!--STYLES-->
   <link rel="stylesheet" href="/styles/importer.css">
   <!--STYLES END-->
 
+  <!-- Your Style Sheets -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
+  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="/leaflet_cluster/dist/MarkerCluster.css">
-
   <link rel="stylesheet" href="/leaflet_markers/css/leaflet.extra-markers.min.css">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="/style.css" type="text/css">
-  <style>
-  body, html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  .bg {
-
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    margin: 0;
-    padding: 0;
-    background-image: url('tweet.png');
-    background-size:100% 100%;
-    background-repeat: no-repeat;
-  }
+  <!-- End of your Style Sheets -->
 
 
-  .bg .btn {
-    position: absolute;
-    top: 38%;
-    left: 76%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-  }
-
-  .bg .btn2 {
-    width: 220px;
-    height: 32px;
-    position: absolute;
-    top: 38%;
-    left: 61%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
-
-  .bg.btn:hover {
-    background-color: black;
-  }
-</style>
 </head>
 
 <body>
   <%- body %>
-
-
-
   <!--SCRIPTS-->
   <script src="/js/dependencies/sails.io.js"></script>
-  <script src="/js/dependencies/sails.io 2.js"></script>
   <!--SCRIPTS END-->
-
-
 </body>
 </html>
