--- a/tweet_classification_app/views/map.ejs
+++ b/tweet_classification_app/views/map.ejs
@@ -11,10 +11,8 @@
   <% sails.config.myconf.image = "/queenslandkey.png"; %>
   <% } %>
   <!-- Start button enables a link so that the simulator begins, next to the button the key is displayed -->
-  <center>
-    <button onclick="if (this.value == 'Start') return Action(this);" type="buttons" value="Start" style=" margin-top: 10px; position: absolute; left: 10%; top: 40; width: 65px;" id="allbus" class="btn btn-success"> Start</button>
-    <img src='<%=sails.config.myconf.image %>'style="margin-top: 10px; position: absolute; left: 36%; top: 40; width: 140px;">
-  </center>
+  <button onclick="if (this.value == 'Start') return Action(this);" type="buttons" value="Start" style=" margin-top: 10px; position: absolute; left: 10%; top: 40; width: 65px;" id="allbus" class="btn btn-success"> Start</button>
+  <img src='<%=sails.config.myconf.image %>'style="margin-top: 10px; position: absolute; left: 36%; top: 40; width: 140px;">
   <br>
   <br>
   <br>
@@ -161,18 +159,19 @@ function closeNav() {
 
 var mcg = L.markerClusterGroup();
 
- // setting the map with diffrent properties + different layers
+ // setting the map with different properties + different layers
  var map = L.map( 'map', {
   center: [20.0, 5.0],
   minZoom: 2,
   zoom: 2,
-  layers: [streets, mcg]
+  layers: [streets, mcg],
+  worldCopyJump: true,
 });
 
 
  L.tileLayer( 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-  subdomains: ['a', 'b', 'c']
+  subdomains: ['a', 'b', 'c'],
 }).addTo( map );
  var baseLayers = {
   "Streets": streets,
